# Nebula-J-Esser

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: NebulaCompilerOptions.cmake
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src/: NebulaJEsserEditor.cpp  NebulaJEsserEditor.h  NebulaJEsserProcessor.cpp  NebulaJEsserProcessor.h
src/dsp/: Analyzer.cpp  Analyzer.h  AtomicFloat.h  DeEsserEngine.cpp  DeEsserEngine.h  Filters.h  Metrics.cpp  Metrics.h
src/state/: Parameters.cpp  Parameters.h
src/ui/: Components.cpp  Components.h  SciFiLookAndFeel.cpp  SciFiLookAndFeel.h
tests/: CMakeLists.txt  EngineTests.cpp
